<resources>
    <string name="app_name">AndroidForm</string>
    <string name="title">Asessment Form Android</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="semester">Semester</string>
    <string name="device">Device yang digunakan untuk coding</string>
    <string name="device_os">OS dari Device yang digunakan</string>
    <string name="versi_os">Nama Versi OS dan bitnya</string>
    <string name="ram">RAM</string>
    <string name="cpu">CPU</string>
    <string name="deployment">Deployment</string>
    <string name="merk_hp">Merk HP</string>
    <string name="os_hp_detail">OS HP dan Versinya</string>
    <string name="ukuran_hp">Ukuran HP</string>
    <string name="penggunaan_internet">Penggunaan Internet Ketika Ngoding?</string>
    <string name="instalasi_android_studio">INSTALASI ANDROID STUDIO</string>
    <string name="sudah_install">Sudah</string>
    <string name="belum_install">Belum</string>
    <string name="versi_android_studio">Nama Versi Android Studio yang Diinstal</string>
    <string name="btn_submit">Kirim</string>
    <string name="result_title">Hasil Assessment Data</string>

    <string name="info_developer">Info Developer</string>

    <string name="developer_profile_title">Profil Developer</string>
    <string name="developer_profile_message">Nama: %1$s\nEmail: %2$s\nUniversitas: %3$s</string>
    <string name="developer_name">Dani Herawan</string>
    <string name="developer_email">qwebaron7@gmail.com</string>
    <string name="developer_university">UNIVERSITAS KOMPUTER INDONESIA</string>
    <string name="close">Tutup</string>

    <string-array name="pilihan_semester">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <string-array name="pilihan_device_coding">
        <item>Laptop</item>
        <item>PC Desktop</item>
        <item>Tidak Punya</item>
    </string-array>

    <string-array name="pilihan_os">
        <item>Windows</item>
        <item>Mac OS</item>
        <item>Linux</item>
    </string-array>

    <string-array name="pilihan_deployment">
        <item>Device Kabel</item>
        <item>Emulator</item>
        <item>Device WIFI</item>
        <item>Tidak Bisa Deployment</item>
    </string-array>

    <string-array name="pilihan_penggunaan_internet">
        <item>WIFI Sendiri</item>
        <item>Tethering HP Sendiri</item>
        <item>WIFI Nebeng</item>
        <item>Tidak Ada</item>
    </string-array>

</resources>